--- a/layout_raw_vintage.html
+++ b/layout_raw_vintage.html
@@ -161,7 +161,7 @@
     </div>
 
     <!-- Some shit -->
-    <div id="newcoll">
+    <div id="someshit">
         <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col col-ct text-center">
@@ -304,9 +304,9 @@
     </div>
 
    <!-- Footer -->
-   <div class="container-fluid bg-dark text-light footer pt-5 wow fadeIn" data-wow-delay="0.1s">
+   <div class="container-fluid bg-dark text-light footer pt-2 wow fadeIn" data-wow-delay="0.1s">
 
-    <div class="container py-5">
+    <div class="container py-3">
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
                 <h4 class="section-title ff-secondary text-start fw-normal mb-4">Contact Me</h4>
@@ -337,7 +337,7 @@
     <div class="container">
         <div class="copyright">
             <div class="row">
-                <div class="container py-5">
+                <div class="container py-3">
                     <div class="row g-5 align-items-center">
                         <div class="col-lg-4 col-md-6">
                             <h4 class="section-title ff-secondary text-start fw-normal mb-4">
